crates/pardosa-schema/tests/compile_fail/btreemap_field_rejected.rs
use pardosa_schema::GenomeSafe;
use std::collections::BTreeMap;
#[derive(GenomeSafe)]
struct Bad {
    map: BTreeMap<u32, u32>,
}
fn main() {}
